--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -79,17 +79,17 @@ jobs:
       run: |
         source activate vaex
         pip install python-dateutil==2.8.0  # botocore caps dateutil leading to issues
-    - name: Cache compiled binaries
-      id: cache-compiled-binaries
-      uses: actions/cache@v1
-      with:
-        path: packages/vaex-core/build
-        key: ${{ runner.OS }}-${{ matrix.python-version }}-${{ hashFiles('packages/vaex-core/src/*') }}
-    - name: Fix cache timestamp
-      if: steps.cache-compiled-binaries.outputs.cache-hit == 'true' && matrix.os != 'windows-latest'
-      shell: bash
-      run: |
-        find packages/vaex-core/build -type f -exec touch {} +
+    # - name: Cache compiled binaries
+    #   id: cache-compiled-binaries
+    #   uses: actions/cache@v1
+    #   with:
+    #     path: packages/vaex-core/build
+    #     key: ${{ runner.OS }}-${{ matrix.python-version }}-${{ hashFiles('packages/vaex-core/src/*') }}
+    # - name: Fix cache timestamp
+    #   if: steps.cache-compiled-binaries.outputs.cache-hit == 'true' && matrix.os != 'windows-latest'
+    #   shell: bash
+    #   run: |
+    #     find packages/vaex-core/build -type f -exec touch {} +
     - name: Install vaex (Windows)
       if: matrix.os == 'windows-latest'
       shell: bash
